# linear_confidence

./: .gitignore  CLAUDE.md  README.md  TODO.txt  Untitled.ipynb  concentration.py  cvxpy_equations.py  data_utils.py  deltas.py  deltas_Gaussian copy.ipynb  deltas_Gaussian.ipynb  deltas_jonny.py  deltas_test.ipynb  equations.ipynb  guassian.py  histogram_of_deltas.ipynb  jonny.ipynb  madelon.py  mcDiarmids.py  misc.py  model_deltas.py  models.py  network.py  optimise_contraint.py  optimise_deltas.py  pipeline.py  pipeline_old.py  plot.py  plots.py  projection.py  pyproject.toml  radius.py  readme.md  requirements.txt  run non_sep.ipynb  run.ipynb  run.py  run_Gaussian.ipynb  run_Gaussian_sep.ipynb  run_Jonny.ipynb  (+11 more)
dario-matlab/: R_from_delta.m  coste.m  demo1.m  demo_clasif.m  deriva_coste.m  deriva_delta.m  evaluate_delta.m  min_func.m  sample_mog.m  solve_delta.m
deltas/: README.md  model_deltas.py
dev/: MIMIC_dev.ipynb  MIMIC_dev_sepsis.ipynb  MNIST_dev.ipynb  TODO.txt  debug.py  debug_SSL.py  debug_madelon.py  equations.ipynb  large_margin.ipynb  large_margin.py  weighted_NN.ipynb  weighted_NN.py
jonny/: deltas_jonny.py  utilities_jonny.py
notebooks-ECAI/: CV_0_Gaussian.ipynb  CV_1_pima.ipynb  CV_2_breast.ipynb  CV_3_hep.ipynb  CV_4_HD.ipynb  CV_5_MIMIC.ipynb  CV_Gaussian.ipynb  CV_Gaussian.py  CV_Gaussian_old.ipynb  CV_HD.ipynb  CV_MIMIC sepsis.ipynb  CV_MIMIC.ipynb  CV_MIMIC_1.ipynb  CV_MIMIC_locked_results.ipynb  (+44 more)
notebooks-ECAI-old/: CV_Gaussian.ipynb  Gaussian_equal.ipynb  MNIST.ipynb  breast_cancer_W.ipynb  dataset_plots.py  datasets_test.ipynb
(+123 files in other folders)
